--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,13 @@
 name = " bevy-single-variable-function-mesh"
 version = "0.1.0"
 authors = ["Armin Schäfer"]
+license-file = "LICENSE"
+description = "This crate creates procedurally generated 2D or 3D bevy meshes by using single-variable functions."
+repository = "https://github.com/772/bevy-single-variable-function-mesh"
 readme = "README.md"
 edition = "2021"
+categories = ["rendering"]
+keywords = ["graphics"]
 
 [dependencies]
 bevy = "0.9"
