--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "bevy-single-variable-function-mesh"
 version = "0.2.1"
 authors = ["Armin Schäfer"]
 license-file = "LICENSE"
-description = "This crate creates procedurally generated 2D or 3D bevy meshes by using single-variable functions."
+description = "A 2D polygon or 3D mesh generated from a single-variable function `f(f32) -> f32`."
 repository = "https://github.com/772/bevy-single-variable-function-mesh"
 readme = "README.md"
 edition = "2021"
