--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "bevy-single-variable-function-mesh"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Armin Schäfer"]
-description = "A 2D polygon or 3D mesh generated from a single-variable function `f(f32) -> f32`."
+description = "A 2D or 3D mesh (`bevy::render::mesh::Mesh`) generated from a single-variable function `f(f32) -> f32`."
 repository = "https://github.com/772/bevy-single-variable-function-mesh"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
