--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Armin Schäfer"]
 description = "A 2D or 3D mesh generated from single-variable functions."
 repository = "https://github.com/772/bevy-single-variable-function-mesh"
 readme = "README.md"
-license-file = "LICENSE"
+license = "MIT OR Apache-2.0"
 edition = "2024"
 categories = ["rendering"]
 keywords = ["graphics"]
