--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy-single-variable-function-mesh"
-version = "0.17.0"
+version = "0.18.0"
 authors = ["Armin Schäfer"]
 description = "A 2D or 3D mesh generated from single-variable functions."
 repository = "https://github.com/772/bevy-single-variable-function-mesh"
@@ -11,7 +11,7 @@ categories = ["rendering"]
 keywords = ["graphics"]
 
 [dependencies]
-bevy = "0.17"
+bevy = { version = "0.18", default-features = false, features = ["3d"] }
 
 [profile.dev]
 opt-level = 0
